--- a/portfolio-bsu-frontend-Step-3-Works (1)/portfolio-bsu-frontend-Step-3-Works/index.html
+++ b/portfolio-bsu-frontend-Step-3-Works (1)/portfolio-bsu-frontend-Step-3-Works/index.html
@@ -55,7 +55,7 @@
                 <div class="work__tag"><span>Website Design</span></div>
                 <button>view work</button>
             </div>
-            <img src="/images/works/work1.png" alt="Real estate Template" class="work__image">
+            <img src="images/works/work1.png" alt="Real estate Template" class="work__image">
         </div>
         <div class="work__item">
             <div class="work__description">
@@ -72,7 +72,7 @@
                 <span class="work__tag">Mobile App</span>
                 <button>view work</button>
             </div>
-            <img src="/images/works/work2.png" alt="Plant identification app" class="work__image">
+            <img src="images/works/work2.png" alt="Plant identification app" class="work__image">
         </div>
         <div class="work__item">
             <div class="work__description">
@@ -89,7 +89,7 @@
                 <span class="work__tag">Mobile App</span>
                 <button>view work</button>
             </div>
-            <img src="/images/works/work3.png" alt="Smart Home App" class="work__image">
+            <img src="images/works/work3.png" alt="Smart Home App" class="work__image">
         </div>
         <div class="work__item">
             <div class="work__description">
@@ -106,7 +106,7 @@
                 <span class="work__tag">Animation</span>
                 <button>view work</button>
             </div>
-            <img src="/images/works/work4.png" alt="Logo Animation" class="work__image">
+            <img src="images/works/work4.png" alt="Logo Animation" class="work__image">
         </div>
     </section>
 </body>
